# jot

./: .gitignore  README.md  pyproject.toml
jot/: __init__.py  accessor.py  datasource.py  jot.py  loader.py
tests/: conftest.py  test_jot.py  test_jot_format.py  test_jot_get.py  test_loader.py
