[tool.poetry]
name = "jot"
version = "0.1.1"
description = "Retrieve JSON value with dot notation"
authors = ["Harutyun <106912298+HarutyunAg@users.noreply.github.com>"]
repository = "https://github.com/HarutyunAg/jot"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
pytest = "^8.3.3"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
